Added class and requirement for fields

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <p>Add new book</p>
 
     <div class="div-book-title">
-      <label for="book-title">Book title:</label>
-      <input type="text" id="book-title" name="book-title" required>
+      <label for="book-title">Book title: *</label><span class="fill fill-book-title" style="visibility: hidden;">This field is required</span>
+      <input type="text" id="book-title" name="book-title">
     </div>
     
     <div class="div-book-author">
-      <label for="book-author">Book author:</label>
-      <input type="text" id="book-author" name="book-author" required>  
+      <label for="book-author">Book author: *</label><span class="fill fill-book-author" style="visibility: hidden;">This field is required</span>
+      <input type="text" id="book-author" name="book-author">
     </div>
 
     <div class="div-book-pages">
-      <label for="num-pages">How many pages:</label>
-      <input type="tel" id="num-pages" name="num-pages" required>
+      <label for="num-pages">How many pages: *</label><span class="fill fill-book-pages" style="visibility: hidden;">This field is required, please enter number</span>
+      <input type="tel" id="num-pages" name="num-pages">
     </div>
 
     <div class="div-book-status">
